[Finishes #105601648] Prevent margin overflow on App Lab share
Avoid collapsing margins by using padding instead.

--- a/apps/style/applab/style.scss
+++ b/apps/style/applab/style.scss
@@ -214,7 +214,8 @@ div#visualizationResizeBar {
   max-width: none !important;
   width: 352px;
   height: 612px;
-  margin: 20px auto;
+  margin: 0 auto;
+  padding: 20px 0;
 
   #designToggleRow, #gameButtons {
     display: none;
